@@ -282,10 +282,10 @@ subsection: buttons
 {% for alias in buttonAliases %}
 <div class="flex flex-nowrap mb2 onmobile-flex-column">
     <span class="p1 w200p">
-        <button class="pm-button-{{ alias }}">Button {{ alias }}</button>
+        <button class="pm-button--{{ alias }}">Button {{ alias }}</button>
     </span>
     <span class="p1 flex-self-vcenter">
-        <code>.pm-button-{{ alias }}</code> 
+        <code>.pm-button--{{ alias }}</code> 
         <button type="button" class="js-copy-clipboard js-trigger-notification" title="Copy to clipboard" data-notification-text="Successfully copied" data-notification-type="success">
             <svg viewBox="0 0 100 100" aria-hidden="true" class="icon-16p" role="img" focusable="false">
              <use xlink:href="#shape-clipboard"></use>
