@@ -6,6 +6,9 @@
 - add `disabled` style for toggle
 - add `indeterminate` style for checkbox
 
+## Updated/fixes
+
+- Update button aliases to modifiers.
 
 # [1.4.9] - 2019-03-22
 
